[tool.poetry]
name = "WizSprinter"
version = "0.5.5"
description = "A semi-official WizWalker extension"
authors = ["SirOlaf <sirolaf@protonmail.com>"]
readme = "README.rst"
license = "GPL-3.0-or-later"
packages = [
    { include = "wizwalker" }
]

[tool.poetry.dependencies]
python = "^3.13"
lark = "^1.1.9"

[tool.poetry.dependencies.wizwalker]
git = "https://codeberg.org/wizwalker/wizwalker.git"
branch = "development"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
